...

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_sessions"
        android:icon="@drawable/ic_profile_man"
        android:title="@string/profiles" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_man"
        android:title="@string/profile" />


</menu>

