<resources>
    <string name="app_name">FragmentsSharedViewModel</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="sessions">Sessions</string>
    <string name="profile">Profile</string>
    <string name="locations">Locations</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="schedule">Schedule</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
...
    <string name="enter_jobTitle">Enter Job Title</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_Time">Enter Time</string>
    <string name="enter_distance">Enter distance</string>
    <string name="notsuccess">not successful!</string>
    <string name="success">Inserted Successfully</string>
    <string name="profiles">Profiles</string>
    <string name="animated_profile_pic">animatedProfilePic</string>
    <string name="animated_text">AnimatedText</string>
</resources>

