...
    android:layout_height="match_parent"
    android:background="#FFF">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profiles_list" />

</androidx.constraintlayout.widget.ConstraintLayout>
